--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Favorite Beverage</title>
-</head>
-<body>
- <p>My preferred beverage of choice is coffee but more specifically a de la olla cold brew with vanilla cold foam. De la olla coffee in general has a softer and smoother taste than other coffee beverages in the market. It can be made with the coffee of your choice, but preferably it should be a Mexican coffee, orange peels, piloncillo for sweetener, and cinnamon sticks. The blend of these ingredients creates a rich flavored coffee. This de la olla cold brew tastes great year round during any weather creating a feeling of comfort and home. </p>   
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pacific Trails Resort</title>
+  </head>
+  <body>
+    <header>
+      <h1>Pacific Trails Resort</h1>
+    </header>
+
+    <!-- nav>ul*4>a -->
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="yurts.html">Yurts</a></li>
+        <li><a href="activities.html">Activities</a></li>
+        <li><a href="reservations.html">Reservations</a></li>
+      </ul>
+    </nav>
+
+    <!-- main>h2{}+p{} -->
+    <main>
+      <h2>Enjoy Nature in Luxury</h2>
+      <p>
+        Pacific Trails Resort offers a special lodging experience on the
+        California North Coast with panoramic views of the Pacific Ocean. Your
+        stay at Pacific Trails Resort includes a sumptuously appointed private
+        yurt and a cooked-to-order breakfast each morning.
+      </p>
+
+      <!-- ul>li*4 -->
+      <ul>
+        <li>
+          Relax in our lodge while enjoying complimentary appetizers and
+          beverages
+        </li>
+        <li>Savor nightly fine dining with an ocean view</li>
+        <li>Unwind in the heated outdoor pool and whirlpool</li>
+        <li>Explore the coast on your own or join our guided tours</li>
+      </ul>
+      <!-- div>p -->
+      <div>
+        <p>
+          Pacific Trails Resort<br />
+          12010 Pacific Trails Road<br />
+          Zephyr, CA 95555<br />
+          888-555-5555
+        </p>
+      </div>
+    </main>
+
+    <!-- footer>p*2 -->
+    <footer>
+      <p>
+        <small><i>Copyright &copy 2021 Pacific Trails Resort</i></small>
+      </p>
+      <p>Ashley Rubio</p>
+    </footer>
+  </body>
 </html>
